# claude-session-logger

./: .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  install.py  pyproject.toml  requirements.txt  setup.py  version.py
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml
claude/: settings.json.example  version.py
claude/hooks/: log-command.py  rename_session.py
commands/: renameAI.md  sessioninfo.md
docs/: channels.md  configuration.md  dev.md  installation.md  log-channels.md
examples/: session-logger-agent-debug.json  session-logger-conversation-replay.json  session-logger-custom-mcp-channel.json  session-logger-minimal.json  session-logger-power-user.json  session-logger.json
hooks/: hooks.json
hooks/schemas/: session-logger.schema.json
hooks/scripts/: log-command.py  run-hook.mjs
scripts/: install-hooks.sh  update-version.sh
scripts-local/: audit_codebase.py
scripts-local/hooks/: pre-commit-basic
scripts-repo/: .gitignore  audit_codebase.py  install-hooks.sh  sync-versions.py  update-version.sh
scripts-repo/hooks/: post-commit  pre-commit  pre-commit-basic  pre-push
scripts-repo/local/: audit_codebase.py  cleanup_subtype_orphans_v0.3.7.py  dev-refresh.py  diff-harness.py  generate_channel_docs.py
tests/checklists/: v0.2.0__Epic__scripts-repo-subtree-and-extra-targets.md  v0.2.1__Feature__tool-coverage-and-unknowns-channel.md  v0.3.0__Feature__tools-channel.md  v0.3.6__Epic__channel-architecture-evolution.md  v0.3.7-pre__Phase0b__cclogger-modularization.md  v0.3.7-pre__Phase2-3__logentry-formatter-cutover.md  v0.3.7-pre__Phase4__marker-broadcast.md  v0.3.7-pre__Phase5__agents-channel.md  v0.3.7-pre__UserConfigSweep__features-dormant-since-v0.3.6.md  v0.3.7__Feature__tools-output-channel-and-taskoutput-template.md
tests/one-offs/: checklist_4_2_concurrent.py  checklist_4_3_readonly.py  checklist_cleanup.py  checklist_hv6_merge.py  conftest.py  test_agents_channel.py  test_channel_options.py  test_config_merge_protocol.py  test_conversation_channels.py  test_file_io_overflow.py  test_marker_broadcast.py  test_per_channel_config.py  test_rename_corruption.py  (+5 more)
(+30 files in other folders)
